add timespent endpoint
