# server/ulmapi/controllers/util/db_converter.py
@@ -4,6 +4,13 @@ from ulmapi.dto.deliverable_info import DeliverableInfo
 from ulmapi.dto.time_spent_info import TimeSpentInfo
 from ulmapi.dto.user_info import UserInfo
 
+
+def time_spent_info_from_db(time_spent_db):
+    return TimeSpentInfo(notes=time_spent_db.notes,
+                         started_at=time_spent_db.started_at,
+                         ended_at=time_spent_db.ended_at)
+
+
 def time_spent_from_course(course):
     time_spent = []
     for ts in course.time_spent:
@@ -17,6 +24,7 @@ def deliverables_from_course(course):
         deliverables[deliverable_key] = deliverable_info_from_db(deliverable_db)
     return deliverables
 
+
 def deliverable_info_from_db(deliverable_db):
     return DeliverableInfo(deliverable_name=deliverable_db.deliverable_name,
                            grade=deliverable_db.grade,
@@ -24,11 +32,13 @@ def deliverable_info_from_db(deliverable_db):
                            due_at=deliverable_db.due_at,
                            completed=deliverable_db.completed)
 
+
 def courses_from_user(user):
     courses = {}
     for (course_key, course_db) in user.courses.items():
         courses[course_key] = course_info_from_db(course_db)
     return courses  
+
 
 def course_info_from_db(course_db):
     deliverables = deliverables_from_course(course_db)
@@ -38,6 +48,7 @@ def course_info_from_db(course_db):
                       expected_difficulty=course_db.expected_difficulty,
                       desired_grade=course_db.desired_grade,
                       deliverables=deliverables, time_spent=time_spent)
+
 
 def user_info_from_db(user):
     courses = courses_from_user(user)
@@ -64,7 +75,7 @@ def course_info_to_db(course_info):
     new_time_spents = []
     if course_info.time_spent is not None:
         for time_spent in course_info.time_spent:
-            new_time_spents.append(time_spent_to_db(time_spent))
+            new_time_spents.append(time_spent_info_to_db(time_spent))
 
     new_course = models.Course(course_id=course_info.course_id,
                               course_name=course_info.course_name,
@@ -84,7 +95,7 @@ def deliverable_info_to_db(deliverable_info):
     return new_deliverable
 
 
-def time_spent_to_db(time_spent_info):
+def time_spent_info_to_db(time_spent_info):
     new_time_spent = models.TimeSpent(notes=time_spent_info.notes,
                                       started_at=time_spent_info.started_at,
                                       ended_at=time_spent_info.ended_at)
